--- a/styles/components/Filters/_Filters.scss
+++ b/styles/components/Filters/_Filters.scss
@@ -1,38 +1,15 @@
-.SizeFilter{
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  @include flex-direction(row);
-  @include flex-wrap(nowrap);
-  -webkit-justify-content: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-align-content: flex-start;
-  -ms-flex-line-pack: start;
-  align-content: flex-start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  .flex-container-sizeFilter{
-    -webkit-order: 0;
-    -ms-flex-order: 0;
-    order: 0;
-    -webkit-flex: 8 0 auto;
-    -ms-flex: 8 0 auto;
-    flex: 8 0 auto;
-    -webkit-align-self: auto;
-    -ms-flex-item-align: auto;
-    align-self: auto;
+.Filters{
+
+  span{
+    font-size: 18px;
+    color: #010101;
   }
-  .flex-container-amount{
-    -webkit-order: 0;
-    -ms-flex-order: 0;
-    order: 0;
-    -webkit-flex: 2 0 auto;
-    -ms-flex: 2 0 auto;
-    flex: 2 0 auto;
-    -webkit-align-self: auto;
-    -ms-flex-item-align: auto;
-    align-self: auto;
+
+  .filter-name{
+    font-size: 18px;
+    color: #9b9b9b;
+    width: 100%;
+    display: block;
+    margin-bottom: 9px;
   }
 }
