--- a/styles/utils/_mixin.scss
+++ b/styles/utils/_mixin.scss
@@ -1,10 +1,44 @@
+@mixin display-flex(){
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
+@mixin flex($x, $y, $auto){
+  -webkit-flex: $x $y $auto;
+  -ms-flex: $x $y $auto;
+  flex: $x $y $auto;
+}
+
 @mixin flex-direction($row){
   -webkit-flex-direction: $row;
   -ms-flex-direction: $row;
   flex-direction: $row;
 }
+
 @mixin flex-wrap($warp){
   -webkit-flex-wrap: $warp;
   -ms-flex-wrap: $warp;
   flex-wrap: $warp;
+}
+
+@mixin justify-content($justify){
+  -webkit-justify-content: $justify;
+  justify-content: $justify;
+}
+
+@mixin align-content($align){
+  align-content: $align;
+  -webkit-align-content: $align;
+}
+
+@mixin align-items($align){
+  -webkit-align-items: $align;
+  align-items: $align;
+}
+
+@mixin align-self($align){
+  -webkit-align-self: $align;
+  -ms-flex-item-align: $align;
+  align-self: $align;
 }
