--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,4 +9,7 @@
 @import './components/_App';
 @import './components/Filters/_Filters';
 @import './components/Filters/_OptionFilter';
-@import './components/Filters/_CustomRating'
+@import './components/Filters/_CustomRating';
+
+@import './components/Products/_Products';
+@import './components/Products/_Product';
