--- a/styles/utils/_mixin.scss
+++ b/styles/utils/_mixin.scss
@@ -42,3 +42,11 @@
   -ms-flex-item-align: $align;
   align-self: $align;
 }
+
+@mixin scale($x, $y){
+  transform: scale($x, $y);
+  -webkit-transform: scale($x, $y);
+  -moz-transform: scale($x, $y);
+  -o-transform: scale($x, $y);
+  -ms-transform: scale($x, $y);
+}
