--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,3 +13,7 @@
 
 @import './components/Products/_Products';
 @import './components/Products/_Product';
+
+@import './components/Header/_Header';
+@import './components/Header/_FilterResults';
+@import './components/Header/_ViewFilters';
