--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,6 +14,7 @@
 @import './components/Filters/OrientationFilter';
 @import './components/Filters/_Filter';
 @import './components/Filters/_CustomRating';
+@import './components/Filters/_Industry';
 
 @import './components/Products/_Products';
 @import './components/Products/_Product';
