--- a/styles/components/general/_Checkbox.scss
+++ b/styles/components/general/_Checkbox.scss
@@ -25,8 +25,11 @@
   .flex-container-amount{
     @include flex(2, 0, auto);
     @include align-self(auto);
+
     .filter-amount{
       margin-bottom: 5px;
+      margin-right: 20px;
+      float: right;
       span{
         font-size: 14px;
         color: #383838;
