refactoring css, and fixed showing filters component and view filters component

--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -1,3 +1,12 @@
-$defaultBackgroundColor: #fff;
+$backgroundColor: #fff;
 
 $defaultFontColor: #555;
+
+$border-color: #ebebeb;
+$light-border-color: #f3f3f3;
+
+$dark-text-color: #9b9b9b;
+$primary-text-color: #686868;
+$secondary-text-color: #383838;
+
+$green: #56c47a;
