--- a/styles/components/Filters/_Filters.scss
+++ b/styles/components/Filters/_Filters.scss
@@ -1,12 +1,12 @@
 .Filters{
-  margin-left: 15px;
+  margin-left: 10px;
   h3{
     font-size: 18px;
     color: #010101;
   }
   .filter-name{
     font-size: 18px;
-    color: #9b9b9b;
+    color: $dark-text-color;
     width: 100%;
     display: block;
     margin-top: 0px;
