--- a/public/main.css
+++ b/public/main.css
@@ -404,7 +404,7 @@ template {
 
 @font-face {
   font-family: MyriadPro;
-  src: url("../../../fonts/Myriad-Pro.ttf"); }
+  src: url("../../../public/fonts/Myriad-Pro.ttf"); }
 body {
   font-family: MyriadPro; }
 
@@ -422,18 +422,17 @@ body {
   -webkit-flex-wrap: nowrap;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
-  align-content: space-between;
-  -webkit-align-content: space-between;
-  -ms-flex-line-pack: justify;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  -ms-flex-pack: start;
+  align-content: flex-start;
+  -webkit-align-content: flex-start;
+  -ms-flex-line-pack: start;
   -webkit-align-items: stretch;
   align-items: stretch;
   -ms-flex-align: stretch; }
   .App .flex-filters-container {
-    max-width: 300px;
-    padding-left: 10px;
+    max-width: 280px;
     border-right: 1px solid #ebebeb;
     -webkit-flex: 1 0 auto;
     -ms-flex: 1 0 auto;
@@ -445,9 +444,9 @@ body {
     -webkit-flex: 9 0 auto;
     -ms-flex: 9 0 auto;
     flex: 9 0 auto;
-    -webkit-align-self: auto;
-    -ms-flex-item-align: auto;
-    align-self: auto; }
+    -webkit-align-self: stretch;
+    -ms-flex-item-align: stretch;
+    align-self: stretch; }
 
 .Checkbox {
   display: -ms-flexbox;
@@ -491,7 +490,6 @@ body {
     -ms-flex-item-align: auto;
     align-self: auto; }
     .Checkbox .flex-container-amount .filter-amount {
-      margin-bottom: 5px;
       margin-right: 20px;
       float: right; }
       .Checkbox .flex-container-amount .filter-amount span {
@@ -499,7 +497,7 @@ body {
         color: #383838; }
 
 .Filters {
-  margin-left: 15px; }
+  margin-left: 10px; }
   .Filters h3 {
     font-size: 18px;
     color: #010101; }
@@ -572,56 +570,36 @@ body {
 .Filter {
   margin-bottom: 20px; }
 
-.CustomRating {
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
-  align-content: flex-start;
-  -webkit-align-content: flex-start;
-  -ms-flex-line-pack: start;
-  -webkit-align-items: flex-start;
-  align-items: flex-start;
-  -ms-flex-align: start; }
-  .CustomRating .flex-container-option {
-    -webkit-flex: 8 0 auto;
-    -ms-flex: 8 0 auto;
-    flex: 8 0 auto;
-    -webkit-align-self: auto;
-    -ms-flex-item-align: auto;
-    align-self: auto; }
-    .CustomRating .flex-container-option .filter-option {
-      display: block;
-      margin-bottom: 5px; }
-      .CustomRating .flex-container-option .filter-option img {
-        padding-left: 5px; }
-      .CustomRating .flex-container-option .filter-option .filter-label {
-        padding-left: 7px;
-        font-size: 14px;
-        color: #383838; }
-  .CustomRating .flex-container-amount {
-    -webkit-flex: 2 0 auto;
-    -ms-flex: 2 0 auto;
-    flex: 2 0 auto;
-    -webkit-align-self: auto;
-    -ms-flex-item-align: auto;
-    align-self: auto; }
-    .CustomRating .flex-container-amount .filter-amount {
-      margin-bottom: 5px; }
-      .CustomRating .flex-container-amount .filter-amount span {
-        font-size: 14px;
-        color: #383838; }
+.CustomRating .flex-container-option {
+  -webkit-flex: 8 0 auto;
+  -ms-flex: 8 0 auto;
+  flex: 8 0 auto;
+  -webkit-align-self: auto;
+  -ms-flex-item-align: auto;
+  align-self: auto; }
+  .CustomRating .flex-container-option .filter-option {
+    display: block;
+    margin-bottom: 5px; }
+    .CustomRating .flex-container-option .filter-option .filter-label {
+      padding-left: 7px;
+      font-size: 14px;
+      color: #383838; }
+.CustomRating .flex-container-amount {
+  -webkit-flex: 2 0 auto;
+  -ms-flex: 2 0 auto;
+  flex: 2 0 auto;
+  -webkit-align-self: auto;
+  -ms-flex-item-align: auto;
+  align-self: auto; }
+  .CustomRating .flex-container-amount .filter-amount {
+    margin-bottom: 5px; }
+    .CustomRating .flex-container-amount .filter-amount span {
+      font-size: 14px;
+      color: #383838; }
 
-.Industry .show-more {
-  color: #57c47a; }
+.ViewFilters .dropdown .dropdown-content {
+  width: 98% !important;
+  border-top: 0px !important; }
 
 .Products {
   display: -ms-flexbox;
@@ -661,9 +639,9 @@ body {
     margin-bottom: 5px;
     font-size: 18px;
     font-weight: 300;
-    color: #686666; }
+    color: #686868; }
   .Product .product-description span {
-    color: #686666;
+    color: #686868;
     font-size: 14px; }
 
 .Product:hover {
@@ -685,18 +663,18 @@ body {
   -webkit-flex-direction: row;
   -ms-flex-direction: row;
   flex-direction: row;
-  -webkit-flex-wrap: nowrap;
-  -ms-flex-wrap: nowrap;
-  flex-wrap: nowrap;
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
-  -ms-flex-pack: start;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -ms-flex-pack: justify;
   align-content: stretch;
   -webkit-align-content: stretch;
   -ms-flex-line-pack: stretch;
-  -webkit-align-items: flex-start;
-  align-items: flex-start;
-  -ms-flex-align: start; }
+  -webkit-align-items: center;
+  align-items: center;
+  -ms-flex-align: center; }
 
 .FilterResults {
   -webkit-flex: 7 0 auto;
@@ -708,7 +686,7 @@ body {
   .FilterResults .search-results p {
     display: inline-block;
     padding-right: 10px;
-    color: #383838;
+    color: #686868;
     font-size: 14px; }
   .FilterResults .search-results span {
     color: #9b9b9b;
@@ -716,7 +694,7 @@ body {
   .FilterResults .selected-filters p {
     display: inline-block;
     margin-top: 0px;
-    color: #383838;
+    color: #686868;
     font-size: 14px; }
   .FilterResults .selected-filters span {
     border: 1px solid #ebebeb;
