--- a/styles/components/Header/_ViewFilters.scss
+++ b/styles/components/Header/_ViewFilters.scss
@@ -7,10 +7,10 @@
     margin-right: 20px;
     .dropbtn {
       background-color: white;
-      color: #383838;
+      color: $secondary-text-color;
       padding: 10px 16px 10px 16px;
       font-size: 14px;
-      border: 1px solid #f3f3f3;
+      border: 1px solid $light-border-color;
       cursor: pointer;
       span{
         color: #9b9b9b;
@@ -23,15 +23,15 @@
       display: none;
       position: absolute;
       width: inherit;
-      border: 1px solid #f3f3f3;
+      border: 1px solid $light-border-color;
       a{
-        color: #383838;
+        color: $secondary-text-color;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
       }
       a:hover{
-        background-color: #56c47a;
+        background-color: $green;
         color: white;
       }
     }
