--- a/styles/components/Products/_Product.scss
+++ b/styles/components/Products/_Product.scss
@@ -19,10 +19,10 @@
       margin-bottom: 5px;
       font-size: 18px;
       font-weight: 300;
-      color: #686666;
+      color: $primary-text-color;
     }
     span{
-      color:#686666;
+      color: $primary-text-color;
       font-size: 14px;
     }
   }
@@ -34,7 +34,7 @@
   }
   .product-description{
     .product-name{
-      color: #56c47a;
+      color: $green;
     }
   }
 }
