--- a/styles/core/_fonts.scss
+++ b/styles/core/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: MyriadPro;
-  src: url('../../../fonts/Myriad-Pro.ttf');
+  src: url('../../../public/fonts/Myriad-Pro.ttf');
 }
 
 body{
