--- a/styles/components/Products/_Product.scss
+++ b/styles/components/Products/_Product.scss
@@ -1,6 +1,7 @@
 .Product{
   padding: 20px;
   margin: 10px;
+  width: 220px;
   border: 2px solid white;
   .product-image{
     margin-left: auto;
