--- a/styles/components/Filters/_OrientationFilter.scss
+++ b/styles/components/Filters/_OrientationFilter.scss
@@ -1,43 +1,21 @@
 .OrientationFilter{
-  @include display-flex();
-  @include flex-direction(row);
-  @include flex-wrap(wrap);
-  @include justify-content(center);
-  -ms-flex-pack: center;
-  @include align-content(flex-start);
-  -ms-flex-line-pack: start;
-  @include align-items(flex-start);
-  -ms-flex-align: start;
-  width: 100%;
-  p{
-    color: $secondary-text-color;
-  }
-  .horizontal-filter{
-    @include flex(1, 0, auto);
-    @include align-self(center);
-    text-align: center;
-    p{
-      margin-top: 18px;
-      padding-right: 10px;
+  div {
+    clear: both;
+    display: inline-block;
+    padding: 0 20px 5px 20px;
+    margin: 0 auto;
+    #horizontal{
+      margin-bottom: 5px;
     }
-    svg{
+    svg {
       display: block;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 0 auto;
     }
-  }
-  .vertical-filter{
-    @include flex(1, 0, auto);
-    @include align-self(center);
-    text-align: center;
-    p{
-      margin-top: 0px;
-      padding-right: 10px
-    }
-    svg{
+    label {
       display: block;
-      margin-left: auto;
-      margin-right: auto;
+      text-align: center;
+      padding: 4px;
+      color: $secondary-text-color;
     }
   }
 }
