--- a/styles/components/Filters/_ViewFilters.scss
+++ b/styles/components/Filters/_ViewFilters.scss
@@ -2,7 +2,9 @@
   text-align: right;
   margin-right: 25px;
   .dropdown{
+    z-index: 10;
     .dropdown-content{
+      background-color: white;
       width: 98% !important;
       border-top: 0px !important;
     }
