--- a/public/main.css
+++ b/public/main.css
@@ -600,7 +600,11 @@ body {
   .Product .product-image {
     margin-left: auto;
     margin-right: auto;
-    display: block; }
+    display: block;
+    transition: All 0.3s linear;
+    -webkit-transition: All 0.3s linear;
+    -moz-transition: All 0.3s linear;
+    -o-transition: All 0.3s linear; }
   .Product .product-rating {
     margin-top: 20px; }
     .Product .product-rating .favourite-image {
@@ -618,11 +622,11 @@ body {
 .Product:hover {
   border: 2px solid #56c47a; }
   .Product:hover .product-image {
-    transform: scale(1.1, 1.1);
-    -webkit-transform: scale(1.1, 1.1);
-    -moz-transform: scale(1.1, 1.1);
-    -o-transform: scale(1.1, 1.1);
-    -ms-transform: scale(1.1, 1.1); }
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1); }
   .Product:hover .product-description .product-name {
     color: #56c47a; }
 
