--- a/styles/components/Products/_Product.scss
+++ b/styles/components/Products/_Product.scss
@@ -7,6 +7,7 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
+    @include transition(.3s, linear);
   }
   .product-rating{
     margin-top: 20px;
@@ -31,7 +32,7 @@
 .Product:hover{
   border: 2px solid #56c47a;
   .product-image{
-    @include scale(1.1, 1.1);
+    @include scale(1.1);
   }
   .product-description{
     .product-name{
