--- a/styles/utils/_mixin.scss
+++ b/styles/utils/_mixin.scss
@@ -43,10 +43,17 @@
   align-self: $align;
 }
 
-@mixin scale($x, $y){
-  transform: scale($x, $y);
-  -webkit-transform: scale($x, $y);
-  -moz-transform: scale($x, $y);
-  -o-transform: scale($x, $y);
-  -ms-transform: scale($x, $y);
+@mixin transition($t, $timing){
+  transition:All $t $timing;
+  -webkit-transition:All $t $timing;
+  -moz-transition:All $t $timing;
+  -o-transition:All $t $timing;
+}
+
+@mixin scale($x){
+  transform: scale($x);
+  -webkit-transform: scale($x);
+  -moz-transform: scale($x);
+  -o-transform: scale($x);
+  -ms-transform: scale($x);
 }
