--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -10,3 +10,5 @@ $primary-text-color: #686868;
 $secondary-text-color: #383838;
 
 $green: #56c47a;
+$favourite-color: #e53935;
+$default-heart-color: #dadada;
