--- a/styles/components/Products/_Product.scss
+++ b/styles/components/Products/_Product.scss
@@ -11,8 +11,12 @@
   }
   .product-rating{
     margin-top: 20px;
-    .favourite-image{
+    .Favourite{
       float: right;
+      color: $default-heart-color;
+      .favourite-color{
+        color: $favourite-color;
+      }
     }
   }
   .product-description{
