--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -10,5 +10,8 @@ $primary-text-color: #686868;
 $secondary-text-color: #383838;
 
 $green: #56c47a;
+
+$default-icon-color: #dadada;
+
 $favourite-color: #e53935;
-$default-heart-color: #dadada;
+$star-color: #fdd201;
