--- a/styles/components/Products/_Product.scss
+++ b/styles/components/Products/_Product.scss
@@ -11,9 +11,18 @@
   }
   .product-rating{
     margin-top: 20px;
+    .Rating{
+      i{
+        padding-right: 4px;
+        color: $default-icon-color;
+      }
+      .color-star{
+        color: $star-color;
+      }
+    }
     .Favourite{
       float: right;
-      color: $default-heart-color;
+      color: $default-icon-color;
       .favourite-color{
         color: $favourite-color;
       }
