use Rating component to generate rating in Filters

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,6 +9,7 @@
 @import './components/_App';
 
 @import './components/general/_Checkbox';
+@import './components/general/_Rating';
 
 @import './components/Filters/_Filters';
 @import './components/Filters/OrientationFilter';
