--- a/public/main.css
+++ b/public/main.css
@@ -480,6 +480,7 @@ body {
       display: block;
       margin-bottom: 5px; }
       .Checkbox .flex-container-option .filter-option .filter-label {
+        display: inline-block;
         padding-left: 7px;
         font-size: 14px;
         color: #383838; }
@@ -496,6 +497,12 @@ body {
       .Checkbox .flex-container-amount .filter-amount span {
         font-size: 14px;
         color: #383838; }
+
+.Rating i {
+  padding-right: 4px;
+  color: #dadada; }
+.Rating .color-star {
+  color: #fdd201; }
 
 .Filters {
   margin-left: 10px; }
@@ -605,11 +612,6 @@ body {
     -o-transition: All 0.3s linear; }
   .Product .product-rating {
     margin-top: 20px; }
-    .Product .product-rating .Rating i {
-      padding-right: 4px;
-      color: #dadada; }
-    .Product .product-rating .Rating .color-star {
-      color: #fdd201; }
     .Product .product-rating .Favourite {
       float: right;
       color: #dadada; }
