--- a/styles/components/general/_Checkbox.scss
+++ b/styles/components/general/_Checkbox.scss
@@ -16,6 +16,7 @@
       display: block;
       margin-bottom: 5px;
       .filter-label {
+        display: inline-block;
         padding-left: 7px;
         font-size: 14px;
         color: $secondary-text-color;
