--- a/public/main.css
+++ b/public/main.css
@@ -669,6 +669,7 @@ body {
   .FilterResults .search-results p {
     display: inline-block;
     padding-right: 10px;
+    margin-bottom: 4px;
     color: #686868;
     font-size: 14px; }
   .FilterResults .search-results span {
@@ -676,7 +677,6 @@ body {
     font-size: 14px; }
   .FilterResults .selected-filters p {
     display: inline-block;
-    margin-top: 0px;
     color: #686868;
     font-size: 14px; }
   .FilterResults .selected-filters span {
@@ -714,14 +714,17 @@ body {
       position: absolute;
       width: inherit;
       border: 1px solid #f3f3f3; }
-      .ViewFilters .dropdown .dropdown-content a {
+      .ViewFilters .dropdown .dropdown-content p {
         color: #383838;
         padding: 12px 16px;
+        margin-top: 0px;
+        margin-bottom: 0px;
         text-decoration: none;
         display: block; }
-      .ViewFilters .dropdown .dropdown-content a:hover {
+      .ViewFilters .dropdown .dropdown-content p:hover {
         background-color: #56c47a;
-        color: white; }
+        color: white;
+        cursor: pointer; }
     .ViewFilters .dropdown .show {
       display: block; }
   .ViewFilters .columns-filter {
