--- a/styles/components/Header/_ViewFilters.scss
+++ b/styles/components/Header/_ViewFilters.scss
@@ -24,15 +24,18 @@
       position: absolute;
       width: inherit;
       border: 1px solid $light-border-color;
-      a{
+      p{
         color: $secondary-text-color;
         padding: 12px 16px;
+        margin-top: 0px;
+        margin-bottom: 0px;
         text-decoration: none;
         display: block;
       }
-      a:hover{
+      p:hover{
         background-color: $green;
         color: white;
+        cursor: pointer;
       }
     }
     .show {display:block;}
