--- a/public/main.css
+++ b/public/main.css
@@ -586,9 +586,9 @@ body {
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -ms-flex-pack: center;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
+  -ms-flex-pack: start;
   align-content: flex-start;
   -webkit-align-content: flex-start;
   -ms-flex-line-pack: start;
