--- a/styles/components/Products/_Products.scss
+++ b/styles/components/Products/_Products.scss
@@ -2,8 +2,8 @@
   @include display-flex();
   @include flex-direction(row);
   @include flex-wrap(wrap);
-  @include justify-content(center);
-  -ms-flex-pack: center;
+  @include justify-content(flex-start);
+  -ms-flex-pack: start;
   @include align-content(flex-start);
   -ms-flex-line-pack: start;
   @include align-items(flex-start);
